Test for Projects Section

--- a/index.html
+++ b/index.html
@@ -253,12 +253,11 @@
           Things I Have Built
         </h2>
         <p class="my-5">
-          Showcasing complete functional projects demonstrates what I can
-          bring to your project. I built these projects from the ground up
-          to demonstrate skill with front-end, back-end, security, and database
-          development. All these projects are full-stack web applications that are
-          published so you can demo them easily.
-          <a href="#contact">Contact me</a> to get a complete code walk through!
+          These are some of my largest-scale, full-stack web applications that I
+          built from scratch. Check them out to see my skills in front-end,
+          back-end, security, and database development.
+          <a href="#contact">Contact me</a> if you'd like to talk about any of this
+          work!
         </p>
         <div class="row row-cols-1 row-cols-lg-3 gy-5">
           <div class="col">
@@ -270,7 +269,7 @@
                 </picture>
                 <div class="hc-content">
                   <p>
-                    A full stack bug tracker app built with
+                    A full stack issue tracker app built with
                     ASP.NET MVC, C#, and SQL
                   </p>
                   <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bugTrackerModal">
@@ -325,11 +324,12 @@
           Smaller Things I Have Built
         </h2>
         <p class="my-5">
-          These are some smaller-scale coding exercises I've solved. I used my front-end
-          skills to create a nice visual interface for each one. This allows anybody to
-          easily test out and play around with my solutions, view the code I wrote, and
-          even access the Github repo. <a href="#contact">Contact me</a> if you would like
-          to discuss any of my work.
+          These are some smaller-scale coding challenges I've solved, but with a
+          twist: I used my front-end skills to create a nice visual interface for
+          each one. This allows anybody to easily try out and play around with my
+          solutions, view the code I wrote, and even access the Github repo.
+          <a href="#contact">Contact me</a> if you would like to discuss any of
+          my work.
         </p>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gy-5">
           <div class="col">
@@ -545,7 +545,7 @@
     <div class="modal-dialog modal-xl modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="bugTrackerModalLabel">Insecticide</h1>
+          <h1 class="modal-title fs-5" id="bugTrackerModalLabel">Golden Tickets</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -589,19 +589,19 @@
               </div>
             </div>
             <div class="col-12 col-lg-7">
-              <h3>Insecticide</h3>
+              <h3>Golden Tickets</h3>
               <p>
-                Insecticide is a software defect tracking system, commonly known as a bug tracker.
-                Insecticide is built with ASP.NET MVC, C#, and SQL. A role-baseed authorization system
-                was implemented to create permission-based roles. The roles of Admin, Project Manager,
-                Developer, and Submitter restrict what a use can see and do within the application.
-                The software allows for uses to submit tickets, and those tickets are tracked through
-                status from Open to Complete.
+                Golden Tickets is an <i>issue tracking</i> or <i>ticketing system</i>.
+                Any organization can manage their projects on this app, by
+                registering their team and inviting members. Each member is assigned
+                1 of 4 possible permission-based roles. Users submit tickets
+                representing tasks; teams collaborate to track tickets to completion.
               </p>
               <p>
-                The system was build with C# and .NET 7 in 3 weeks. The front end was developed with
-                HTML, JavaScript, and Bootstrap. The back-end utilizes MVC and C#. The database was
-                built with PostgreSQL and hosted on Railway. Please visit the site to try it out.
+                Golden Tickets was built with C# and .NET 7. The front-end was
+                developed with HTML, JavaScript, and CSS including Bootstrap. The
+                back-end uses ASP.NET MVC and C#. The database was built with
+                PostgreSQL and hosted on Railway.
               </p>
               <ul class="list-group">
                 <li class="list-group-item">
@@ -651,7 +651,7 @@
     <div class="modal-dialog modal-xl modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="addressBookModalLabel">Contact Pro</h1>
+          <h1 class="modal-title fs-5" id="addressBookModalLabel">NetworKing</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -695,15 +695,18 @@
               </div>
             </div>
             <div class="col-12 col-lg-7">
-              <h3>Contact Pro</h3>
+              <h3>NetworKing</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quis maiores velit nesciunt porro, nulla
-                sit, laudantium consectetur fugiat iste esse nemo. Corporis officiis itaque vel alias dolores modi nam!
+                NetworKing is an online address book. Register to create an account
+                with your own private address book, which can be filled with the
+                names, photos, addresses, emails, phone numbers and/or birthdays of
+                all your contacts!
               </p>
               <p>
-                The system was build with C# and .NET 7 in 3 weeks. The front end was developed with
-                HTML, JavaScript, and Bootstrap. The back-end utilizes MVC and C#. The database was
-                built with PostgreSQL and hosted on Railway. Please visit the site to try it out.
+                NetworKing was built with C# and .NET 7. The front-end was
+                developed with HTML, JavaScript, and CSS including Bootstrap. The
+                back-end uses ASP.NET MVC and C#. The database was built with
+                PostgreSQL and hosted on Railway.
               </p>
               <ul class="list-group">
                 <li class="list-group-item">
@@ -752,7 +755,7 @@
     <div class="modal-dialog modal-xl modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="devBlogModalLabel">Tech Talk</h1>
+          <h1 class="modal-title fs-5" id="devBlogModalLabel">Comment Lines</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -796,15 +799,18 @@
               </div>
             </div>
             <div class="col-12 col-lg-7">
-              <h3>Tech Talk</h3>
+              <h3>Comment Lines</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quis maiores velit nesciunt porro, nulla
-                sit, laudantium consectetur fugiat iste esse nemo. Corporis officiis itaque vel alias dolores modi nam!
+                Comment Lines is my online blogging application where I write about
+                my experiences in software and web development. You can simply visit
+                the site to read what I have to say, but you can also register your
+                own account to gain the ability to like and comment on my blogposts!
               </p>
               <p>
-                The system was build with C# and .NET 7 in 3 weeks. The front end was developed with
-                HTML, JavaScript, and Bootstrap. The back-end utilizes MVC and C#. The database was
-                built with PostgreSQL and hosted on Railway. Please visit the site to try it out.
+                Comment Lines was built with C# and .NET 7. The front-end was
+                developed with HTML, JavaScript, and CSS including Bootstrap. The
+                back-end uses ASP.NET MVC and C#. The database was built with
+                PostgreSQL and hosted on Railway.
               </p>
               <ul class="list-group">
                 <li class="list-group-item">
