Text for Blog Section

--- a/index.html
+++ b/index.html
@@ -448,9 +448,9 @@
       <div class="container">
         <h2 class="text-center display-1 mb-5">Stuff I Write About</h2>
         <p>
-          I write on my blog on a regular basis. I think it's important to share
-          your knowledge with others, and I find that writing about my code helps
-          me to gain a better understanding as well.
+          I write in my blog to share my thoughts and experiences in software/web
+          development, as I work on projects, try new challenges, and learn new
+          things. These are my most recent posts.
         </p>
         <div id="blogs">
         </div>
