--- a/index.html
+++ b/index.html
@@ -133,11 +133,13 @@
         </div>
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
-            I am a software developer based in the United States. I have been building applications and websites for
-            years. I have been successful in taking a company's idea and bringing it to life. I primarily use C# and
-            .NET to build web applications. I can take an idea and turn it into meaningful and useful software products.
-            The ability to transform requirements into useful software helps me prioritize tasks, iterate fast, and
-            deliver. Take a look at my portfolio work and see if we can work together on your next project!
+            I am a Seattle-based Software Developer with experience designing and
+            building many different products, including CRM automation, Desktop
+            applications, and even games. Lately I've been working on full-stack
+            web development; the <a href="#projects">Projects</a> and
+            <a href="#challenges">Challenges</a> I have in this portfolio
+            demonstrate the web dev skills I've picked up thus far. Take a look
+            and see if we can work together on your next project!
           </div>
         </div>
         <a href="/resume.pdf" class="btn btn-primary my-3">Download Resume</a>
@@ -159,14 +161,11 @@
               </div>
               <div class="icon-card-body">
                 <p>
-                  I use C# on a daily basis to build full-stack web
-                  applications. You can see my work implementing C#
-                  in my <a href="#projects">projects</a> section!
-                </p>
-                <p>
-                  I use proven design patterns and frameworks to build
-                  websites. ASP.NET Core Web and MVC fits the bill for
-                  most projects.
+                  I use C# to build my full-stack web applications. My most
+                  commonly-used framework is ASP.NET Core Web, and MVC is my
+                  most-used design pattern. Check out my
+                  <a href="#projects">Projects</a> to see the applications
+                  I've built in C#!
                 </p>
               </div>
             </div>
@@ -186,9 +185,10 @@
               </div>
               <div class="icon-card-body">
                 <p>
-                  I use HTML, CSS, and Bootstrap to build beautiful
-                  responsive websites. Bootstrap is my go to CSS framework.
-                  Many shy away from the front-end, but I embrace it.
+                  I use HTML and CSS to build responsive, visually-appealing
+                  websites that cater to any common screen size or device type.
+                  Bootstrap is my primary CSS framework, but I also write custom
+                  CSS to further enhance the appearance of my sites.
                 </p>
               </div>
             </div>
@@ -202,11 +202,11 @@
               </div>
               <div class="icon-card-body">
                 <p>
-                  JavaScript is the language of the web. I use
-                  vanilla JS and I am comfortable with many JS
-                  frameworks. Check out my
-                  <a href="#challenges">challenges</a> section
-                  for some JS projects!
+                  Along with Vanilla JavaScript, I'm also experienced in
+                  libraries like jQuery and React as well as techniques like AJAX.
+                  My <a href="#projects">Projects</a> and
+                  <a href="#challenges">Challenges</a> demonstrate how I create
+                  interactive webpages using JS.
                 </p>
               </div>
             </div>
@@ -220,9 +220,9 @@
               </div>
               <div class="icon-card-body">
                 <p>
-                  SQL is the language of the database. My projects
-                  all utilize a database. I have used Postgres on all
-                  of them. I can write SQL on any DB platform.
+                  All of my <a href="#projects">Projects</a> use a PostgreSQL
+                  database. I also have many years of work experience writing SQL
+                  to query databases, on multiple different DB platforms.
                 </p>
               </div>
             </div>
@@ -238,9 +238,10 @@
                 </div>
               </div>
               <div class="icon-card-body">
-                I use git and github for all my projects. Git is
-                the most used source control framework on the
-                planet. I also employ CI/CD for publishing.
+                Github and git are my source control framework of choice, for all of
+                my <a href="#projects">Projects</a> and
+                <a href="#challenges">Challenges</a>. I also practice Continuous
+                Integration and Continuous Delivery (CI/CD) for publishing.
               </div>
             </div>
           </div>
