Custom Link URL updates

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
           <div class="card shadow">
             <div class="card-body text-center bg-black">
               Check out my
-              <a href="https://bugtracker-production-b641.up.railway.app/" target="_blank" rel="noopener noreferrer"
+              <a href="https://goldentickets.up.railway.app/" target="_blank" rel="noopener noreferrer"
                 class="gold-underline">
                 <span class="text-shine-gold">Issue Tracker</span></a>!
             </div>
@@ -640,7 +640,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <a type="button" class="btn btn-primary" target="_blank" rel="noopener noreferrer"
-            href="https://bugtracker-production-b641.up.railway.app/">Visit Project</a>
+            href="https://goldentickets.up.railway.app/">Visit Project</a>
         </div>
       </div>
     </div>
@@ -745,7 +745,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <a type="button" class="btn btn-primary" target="_blank" rel="noopener noreferrer"
-            href="https://je-networking-production.up.railway.app/">Visit Project</a>
+            href="https://networking.up.railway.app/">Visit Project</a>
         </div>
       </div>
     </div>
@@ -849,7 +849,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <a type="button" class="btn btn-primary" target="_blank" rel="noopener noreferrer"
-            href="https://guardianblog-production.up.railway.app/">Visit Project</a>
+            href="https://commentlines.up.railway.app/">Visit Project</a>
         </div>
       </div>
     </div>
