--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <section id="about" class="section-page">
       <div class="container text-center">
         <h2 class="display-1 mb-5">About Me</h2>
-        <div class="p-3">
+        <div class="pb-3">
           <img src="/img/jonerik.jpg" height="250" class="rounded-circle" />
         </div>
         <div class="row">
