LinkedIn url update

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         </div>
 
         <div class="d-none d-lg-block col-lg-3 text-lg-end">
-          <a href="https://www.linkedin.com/in/jon-erik-ekdahl-96804640" class="text-decoration-none" target="_blank"
+          <a href="https://www.linkedin.com/in/jelekdahl" class="text-decoration-none" target="_blank"
             rel="noopener noreferrer">
             <i class="bi bi-linkedin p-2"></i>
           </a>
