--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
             and see if we can work together on your next project!
           </div>
         </div>
-        <a href="/resume.pdf" class="btn btn-primary my-3">Download Resume</a>
+        <a href="/Jon-Erik Ekdahl - Resume.pdf" target="_blank"
+          rel="noopener noreferrer" class="btn btn-primary my-3">View Resume</a>
       </div>
     </section>
     <section id="skills" class="section-page">
